--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ yarn.lock
 .wallet11.json
 luckyscriptions1.js
 luckyscriptions3.js
+luckyscriptions4.js
+luckyscriptions10.js
+.cookie
+bulk-mint.sh
+
